# go/blog-service/internal/model/tag.go
@@ -1,9 +1,16 @@
 package model
 
+import "github.com/GordonChen13/learn-examples/go/blog-service/pkg/app"
+
 type Tag struct {
 	*Model
-	Name string `json:"name"`
-	State uint8 `json:"state"`
+	Name  string `json:"name"`
+	State uint8  `json:"state"`
+}
+
+type TagSwagger struct {
+	List  []*Tag
+	Pager *app.Pager
 }
 
 func (a Tag) TableName() string {
