# go/blog-service/internal/routers/api/v1/tag.go
@@ -8,17 +8,13 @@ func NewTag() Tag {
 	return Tag{}
 }
 
-func (t Tag) Get(c *gin.Context) {
-
-}
-
 // @Summary 获取多个标签
 // @Produce json
 // @Param name query string false "标签名称" maxlength(100)
 // @Param state query int false "状态" Enums(0,1) default(1)
 // @Param page query int false "页码"
 // @Param page_size query int false "每页数量"
-// @Success 200 {object} model.Tag "成功"
+// @Success 200 {object} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
 // @Router /api/v1/tags [get]
@@ -53,6 +49,13 @@ func (t Tag) Update(c *gin.Context) {
 
 }
 
+// @Summary 删除标签
+// @Produce  json
+// @Param id path int true "标签ID"
+// @Success 200 {string} string "成功"
+// @Failure 400 {object} errcode.Error "请求错误"
+// @Failure 500 {object} errcode.Error "内部错误"
+// @Router /api/v1/tags/{id} [delete]
 func (t Tag) Delete(c *gin.Context) {
 
 }
